--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 /* body {
   background-color: rgb(186, 15, 15); 
 } */
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #000000 !important;
+  color: #ffffff !important;
+}
