--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -1,29 +1,162 @@
 .dashboard__card {
-  background-color: $white;
-  padding: 20px;
+  background-color: #fffff5;
+  padding: 0px;
   display: flex;
-  margin-bottom: 30px;
+  flex-direction: column;
   align-items: center;
+  margin-bottom: 30px;
   color: $black !important;
-  border-radius: 25px;
-  //justify-content: space-between;
-
-  .card__digits {
-    font-weight: 800;
-    font-size: 1.7em;
-    margin-left: 25px;
-  }
-  .card__details {
-    margin-left: 25px;
-  }
-  h5 {
+  border-radius: 10px;
+  text-align: center; // Center align text
+  h4 {
     opacity: 0.4;
   }
-  .card__icon {
-    background-color: lightblue;
-    border-radius: 50%;
-    padding: 10px;
+  .card__details {
+    width: 100%; // Ensure full-width details for consistent alignment
+    h4 {
+      opacity: 0.4;
+    }
+    .card__title {
+      margin-top: 15px; // Aligns with Card2
+      margin-bottom: -7px;
+      opacity: 0.5;
+    }
+    .card__enter {
+      margin-top: 10px;
+      margin-bottom: 10px;
+
+      font-weight: bold !important;
+    }
+    .card__content {
+      display: flex;
+      align-items: center;
+
+      // padding: 10px; // Add some padding for spacing
+      margin-top: 15px;
+    }
+    .card__content2 {
+      display: flex;
+      align-items: center;
+
+      // padding: 10px; // Add some padding for spacing
+      margin-top: 15px;
+      margin-right: 10px;
+    }
+
+    .card__icon {
+      background-color: #fffff5;
+      border-radius: 0%;
+      // padding: 10px;
+      margin-right: 10px;
+      margin-left: 35px;
+    }
+
+    .card__icon2 {
+      background-color: #fffff5;
+      border-radius: 0%;
+      // padding: 10px;
+      margin-right: 10px;
+      margin-left: 30px;
+    }
+    .card__digits {
+      font-weight: 800;
+      font-size: 1.9em;
+      margin-left: 10px;
+    }
   }
+
+  &:hover {
+    transform: scale(1.02);
+  }
+}
+
+// .dashboard__card {
+//   background-color: #fffff5;
+//   padding: 20px;
+//   display: flex;
+//   margin-bottom: 30px;
+//   align-items: center;
+//   color: $black !important;
+//   border-radius: 10px;
+//   //justify-content: space-between;
+
+//   .card__content {
+//     display: flex;
+//   }
+//   .card__digits {
+//     font-weight: 800;
+//     font-size: 1.7em;
+//     margin-left: 25px;
+//   }
+//   // .card__details {
+//   //   margin-left: 25px;
+//   // }
+//   .card__details {
+//     margin-left: 3px;
+//   }
+//   h5 {
+//     opacity: 0.4;
+//   }
+//   .card__icon {
+//     background-color: lightblue;
+//     border-radius: 50%;
+//     padding: 10px;
+//   }
+//   &:hover {
+//     transform: scale(1.02);
+//   }
+// }
+
+.dashboard__card2 {
+  background-color: #fffff5;
+  padding: 0px;
+  display: flex;
+  flex-direction: column; // Stack items vertically
+  align-items: center;
+  margin-bottom: 30px;
+  color: $black !important;
+  border-radius: 10px;
+  text-align: center; // Center align text
+
+  .card__icon {
+    background-color: #fffff5;
+    border-radius: 50%;
+    padding: 0px;
+    margin-top: 2px;
+    margin-bottom: 10px; // Space around icon
+  }
+
+  .card__detailss {
+    margin-left: 0px;
+    margin-top: 15px;
+  }
+  .card__detailsss {
+    margin-left: 0px;
+    margin-bottom: 7px;
+    font-weight: bold !important;
+  }
+  h4 {
+    opacity: 0.5;
+  }
+  small {
+    opacity: 0.9;
+  }
+  .card__details {
+    .card__title {
+      font-weight: 800;
+      font-size: 1.2em;
+      margin-bottom: 5px;
+      margin-top: 20px; // Space below the title
+    }
+
+    .card__enter {
+      // opacity: 0.8;
+      // font-size: 1em;
+      margin-top: 10px;
+      margin-bottom: 10px; // Space above 'Enter' text;
+    }
+  }
+
   &:hover {
     transform: scale(1.02);
   }
