--- a/src/scss/_students.scss
+++ b/src/scss/_students.scss
@@ -42,6 +42,10 @@
   display: block;
   border: 1px #dadada solid;
 }
+.showcheckboxes1 {
+  // display: block;
+  // border: 1px #dadada solid;
+}
 
 .profileContainer {
   position: relative;
