--- a/src/scss/custom-styles.scss
+++ b/src/scss/custom-styles.scss
@@ -2,12 +2,12 @@
 //   background-color: rgb(202, 61, 61) !important;
 // }
 
-html,
-body,
-#root {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: #000000 !important;
-  color: #ffffff !important;
-}
+// html,
+// body,
+// #root {
+//   margin: 0;
+//   padding: 0;
+//   height: 100%;
+//   background-color: #000000 !important;
+//   color: #ffffff !important;
+// }
